# MeanShift

./: slide_MeanShift.pptx  stat.xlsx  statistiche mean shift.xlsx
MeanShiftC++_OpenMP/: CMakeLists.txt  Cluster.cpp  Cluster.h  ClusterManager.cpp  ClusterManager.h  MeanShift.cpp  MeanShift.h  Point.cpp  Point.h  SpeedUpTests.cpp  SpeedUpTests.h  Utils.cpp  Utils.h  main.cpp
MeanShiftC++_OpenMP/CreateAndDrawClusters/: CreateClusters.py  DrawClusters.py
MeanShiftC++_OpenMP/input/newCluster/: 3D_data_100.csv  3D_data_1000.csv  3D_data_10000.csv  3D_data_20000.csv  3D_data_50000.csv
MeanShiftC++_OpenMP/output/: out_3D_data_100.csv
MeanShiftCuda/: MeanShiftCuda.cu
